<resources>
    <string name="app_name">GroupDProject1</string>
    <string name="ian_title">Ian Fuentes</string>
    <string name="ian_prof_desc">Ian Fuentes Profile Picture</string>
    <string name="ian_course">Computing Science</string>
    <string name="ian_interests">Chess, Basketball, Old Stories, Video Games</string>
    <string name="ian_desc1">Roses are Red</string>
    <string name="ian_desc2">Android is Blue</string>
    <string name="ian_desc3">My code ends at 13</string>
    <string name="ian_desc4">but my error is in line 222</string>


    <string name="dwaine_profilepic">dwaine_profilepic</string>
    <string name="dwaine_algate">Dwaine Algate</string>
    <string name="diploma_of_computing_science">Diploma of Computing Science</string>
    <string name="about_me">About Me</string>
    <string name="if_my_profile_picture_didn_t_give_it_away_i_am_a_big_fan_of_pc_gaming">If my profile picture didn\'t give it away I am a big fan of PC gaming.</string>
    <string name="fun_fact_i_am_6_5_quot_and_yes_the_weather_is_nice_up_here">"Fun Fact: I am 6'5" and yes the weather is nice up here"</string>

    <string name="sandeep_sran">Sandeep Sran</string>
    <string name="computing_science">Computing Science</string>
    <string name="sandeepsran_gmail_com">sandeepsran@gmail.com</string>
    <string name="sports_music_netflix">Sports, Music, Netflix</string>
    <string name="profile_image">profile_image</string>
    <string name="education">education</string>
    <string name="email">email</string>
    <string name="hobbies">hobbies</string>


    <string name="text">Text</string>
    <string name="ryan_profilepic">ryan_profilepic</string>
    <string name="ryan_fielding">Ryan Fielding</string>
    <string name="computing_science_">Computing Science</string>
    <string name="rfielding_hotmail_ca">rfielding@hotmail.ca</string>
    <string name="politics_games_movies">Politics, Games, Movies</string>
    <string name="profile_app">Profile App</string>
    <string name="ryan_feilding">Ryan Feilding</string>
    <string name="ian_fuentes">Ian Fuentes</string>

    <string name="dwaine">Dwaine</string>
    <string name="ryan">Ryan</string>
    <string name="sandeep">Sandeep</string>
    <string name="dwaine_pic">dwaine_pic</string>
    <string name="ryan_pic">ryan_pic</string>
    <string name="sran_pic">sran_pic</string>
    <string name="ian_pic">ian_pic</string>
    <string name="hobbies_gaming_music_tv">Hobbies: Gaming, Music, TV</string>
    <string name="email_dwainealgate_gmail_com">Email: dwainealgate@gmail.com</string>
    <string name="ryan_profile">ryan_profile</string>
    <string name="profile_app_team_d">Profile App (Team D)</string>
    <string name="lab_3_team_profile_assignment_for_comp2160">Lab 3 team profile assignment for COMP2160</string>
</resources>